# gitgeist-ai

./: .gitgeist.example.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEEDBACK.md  LAUNCH.md  LICENSE  README.md  USAGE.md  create_python_files.py  pyproject.toml  requirements.txt  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
extensions/vscode/: CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  gitgeist-vscode-0.3.0.vsix  package-lock.json  package.json
extensions/vscode/src/: extension.ts  gitgeistProvider.ts
gitgeist/ai/: commit_generator.py  llm_client.py  prompts.py
gitgeist/analysis/: ast_parser.py  language_detector.py
gitgeist/cli/: commands.py  doctor.py  github_commands.py  web_commands.py  workspace_commands.py
gitgeist/core/: branch_manager.py  caching.py  config.py  git_handler.py  performance.py  schema.py  templates.py  validator.py  watcher.py  workspace.py
gitgeist/integrations/: __init__.py  github.py
gitgeist/memory/: __init__.py  planner.py  vector_store.py
gitgeist/utils/: error_handler.py  exceptions.py  logger.py  recovery.py
gitgeist/web/: __init__.py  server.py
scripts/: setup.py  setup_repo.sh
tests/: test_ast_parser.py  test_config.py
