[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitgeist"
version = "0.1.0"
description = "Autonomous AI Git agent for intelligent code management"
authors = [{name = "Gitgeist AI", email = "hello@gitgeist.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "watchdog>=3.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0", 
    "tree-sitter-typescript>=0.20.0",
    "aiohttp>=3.8.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gitgeistai/gitgeist-ai"
Repository = "https://github.com/gitgeistai/gitgeist-ai"
Issues = "https://github.com/gitgeistai/gitgeist-ai/issues"
Discussions = "https://github.com/gitgeistai/gitgeist-ai/discussions"

[project.scripts]
gitgeist = "gitgeist.cli.commands:app"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black" 
line_length = 88
